# IPTelepathy

./: CMakeLists.txt  ChangeLog  FindDBUS_GLIB_1.cmake  FindGLIB_2_0.cmake  FindP4H.cmake  FindTELEPATHY.cmake  IPTelepathy.kdev4  README
.kdev4/: IPTelepathy.kdev4
debian/: README  README.Debian  README.source  changelog  control  copyright  libp4h-plugin-iptelepathy-dev.dirs  libp4h-plugin-iptelepathy-dev.install  watch
debian/tmp/usr/IPTelepathy/: IPTelepathy.h  IPTelepathyPluginPrerequisites.h
debian/tmp/usr/lib/: libIPTelepathy.so.0.0.1
include/: IPTelepathyPlugin.h
res/: plugin.cfg
src/: IPTelepathyPlugin.cpp  IPTelepathyPluginDLL.cpp
